<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">波波迷航記</string>
    <string name="action_settings">Settings</string>
    <string name="Radio_button_01">沒有或極少</string>
    <string name="Radio_button_02">有時侯</string>
    <string name="Radio_button_03">時常</string>
    <string name="Radio_button_04">常常或總是</string>
    <string name="Period_01">每周: 1天以下</string>
    <string name="Period_02">每周: 1～2天</string>
    <string name="Period_03">每周: 3～4天</string>
    <string name="Period_04">每周: 5～7天</string>
    <string name="question_title">透視你的心情情緒</string>
    <string name="question_description_01">很開心你打開這份量表</string>
    <string name="question_description_02">請你用心回想【最近兩週】的心情，</string>
    <string name="question_description_03">並且與過去的狀況比較，點選最適合的答案。</string>
    <string name="question_01">1. 我覺得心裡很難過</string>
    <string name="question_02">2. 碰到事情，我只想逃避</string>
    <string name="question_03">3. 我心裡覺得很空虛</string>
    <string name="question_04">4. 沒有人瞭解我</string>
    <string name="question_05">5. 我感到絕望</string>
    <string name="question_06">6. 我覺得人生是灰暗的</string>
    <string name="question_07">7. 我對原本喜歡的事，變得沒興趣了</string>
    <string name="question_08">8. 我的胸口會緊緊、悶悶的</string>
    <string name="question_09">9. 我在掩飾心裡的痛苦</string>
    <string name="question_10">10. 我變得討厭自己</string>
    <string name="question_11">11. 我是別人的負擔</string>
    <string name="question_12">12. 我覺得很煩</string>
    <string name="question_13">13. 我上課唸書不能專心</string>
    <string name="question_14">14. 我感到昏昏沈沈的</string>
    <string name="question_15">15. 我覺得自己沒有未來</string>
    <string name="question_16">16. 我認為自己做人失敗</string>
    <string name="question_17">17. 我會莫名地想哭</string>
    <string name="question_18">18. 我覺得日子痛苦難熬</string>
    <string name="question_19">19. 我不想出門</string>
    <string name="question_20">20. 我覺得生活沒有意義</string>
    <string name="question_21">21. 我感到很寂寞</string>
    <string name="question_22">22. 我對任何事都提不起勁</string>
    <string name="question_23">23. 我覺得記憶力變差了</string>
    <string name="question_24">24. 我會猶豫不決，很難做決定</string>
    <string name="question_25">25. 我覺得自己是沒有價值的人</string>
    <string name="question_26">26. 沒有人關心我</string>
    <string name="question_27">27. 我不快樂</string>
    <string name="question_28">28. 我會想要傷害自己</string>
    <string name="question_29">29. 我會一直發呆</string>
    <string name="question_30">30. 我不想和別人交談</string>
    <string name="question_31">31. 我想自己躲起來</string>

</resources>
