<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="horizontal"
    android:background="@drawable/background_06_03"
    android:weightSum="1">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:weightSum="12">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:weightSum="8"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Radio_button_01" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Radio_button_02" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Radio_button_03" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow01"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/question_11" />
            <RadioGroup
                android:id="@+id/radioGroup01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="left|right"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton01_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton01_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton01_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </RadioGroup>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow02"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/question_12" />

            <RadioGroup
                android:id="@+id/radioGroup02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton02_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton02_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton02_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </RadioGroup>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow03"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/question_13" />

            <RadioGroup
                android:id="@+id/radioGroup03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton03_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton03_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton03_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </RadioGroup>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow04"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/question_14" />

            <RadioGroup
                android:id="@+id/radioGroup04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButton04_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton04_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton04_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="true" />

            </RadioGroup>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow05"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/question_15" />

            <RadioGroup
                android:id="@+id/radioGroup05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton05_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton05_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton05_03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </RadioGroup>
        </TableRow>

    </TableLayout>

</RelativeLayout>